[package]
name = "star-to-pocket"
version = "0.1.0"
authors = ["yamahigashi <yamahigashi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pocket = { git = "https://github.com/ozbe/rust-pocket.git" }
config = "0.10.1"
shellexpand = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "1.1.1"
chrono = "0.4.15"
clap = "2.33.3"
tokio = { version = "0.2.22", features = ["macros"] }
url = "1"
github-rs = "0.7"
